--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./public/Gato-svg.svg" type="image/svg+xml" sizes="16x16 32x32">
     <title>Todo-List App</title>
   </head>
   <body>
